--- a/src/frontend/src/components/YearSelector.scss
+++ b/src/frontend/src/components/YearSelector.scss
@@ -1,6 +1,7 @@
 .YearSelector{
-    text-align: right;
+    text-align: center;
     list-style-type: none;
+    padding-top: 30px;
     li{
         margin-top: 10px;
         margin-bottom: 10px;
